--- a/Jaunt/client/view/home/post.html
+++ b/Jaunt/client/view/home/post.html
@@ -6,8 +6,7 @@
                     <legend>new post</legend>
                     <div class="row">
                         <div class="col-sm-9">
-                            <textarea cols="2" class="form-control">
-                            </textarea>
+                            <textarea cols="2" class="form-control"></textarea>
                         </div>
                         <div class="col-sm-1">
                             <button class="btn btn-lg">
