updated timeline's links selectors from class to ids

--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -6,3 +6,18 @@ body {
     background-color: #FFF;
     width: 780px;
 }
+
+
+/*
+client/view/home/home.html
+*/
+
+#js-myTimeline {
+    padding: 0, 5px 0 5px;
+    font-style: none;
+}
+
+#js-globalTimeline {
+    padding: 0, 5px 0 5px;
+    font-style: none;
+}
