--- a/Jaunt/client/view/home/home.html
+++ b/Jaunt/client/view/home/home.html
@@ -4,7 +4,7 @@
         {{> post}}
         <!-- option to choose between timelines-->
         <div class="row">
-            <a href="#" class="js-myTimeline">My Timeline</a> <a href="#" class="js-globalTimeline">Global Timeline</a> {{#if isMyTimeline}} {{> timeline}} {{else}} {{> timelineGlobal}} {{/if}}
+            <a href="#" id="js-myTimeline">My Timeline</a> <a href="#" id="js-globalTimeline">Global Timeline</a> {{#if isMyTimeline}} {{> timeline}} {{else}} {{> timelineGlobal}} {{/if}}
         </div>
     </section>
     {{else}}
