added some effects on posts, added who is the author and full functional profile edition

--- a/Jaunt/client/view/home/profile/profile_form.html
+++ b/Jaunt/client/view/home/profile/profile_form.html
@@ -1,6 +1,6 @@
 <template name="profileForm">
     <form class="form-horizontal">
-        <input type="text" class="form-control" placeholder="name">
+        <input type="text" class="form-control" placeholder="name" required>
         <input type="text" class="form-control" placeholder="description">
         <button class="btn btn-success">Update!</button>
     </form>
