--- a/Jaunt/client/view/header.html
+++ b/Jaunt/client/view/header.html
@@ -2,7 +2,7 @@
     <header class="container">
         <nav class="navbar navbar-default">
             <div class="navbar-header">
-                <a class="navbar-brand">Jaunt</a>
+                <a class="navbar-brand" href="/" >Jaunt</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
