--- a/Jaunt/client/view/home/home.html
+++ b/Jaunt/client/view/home/home.html
@@ -7,7 +7,10 @@
         {{> post}}
         <!-- option to choose between timelines-->
         <div class="row">
-            <a href="#" id="js-myTimeline">My Timeline</a> <a href="#" id="js-globalTimeline">Global Timeline</a> {{#if isMyTimeline}} {{> timeline}} {{else}} {{> timelineGlobal}} {{/if}}
+          <div class="text-left">
+            <a href="#" id="js-myTimeline">My Timeline</a> <a href="#" id="js-globalTimeline">Global Timeline</a>
+          </div>
+            {{#if isMyTimeline}} {{> timeline}} {{else}} {{> timelineGlobal}} {{/if}}
         </div>
     </section>
     {{else}}
