--- a/Jaunt/client/css/timeline.css
+++ b/Jaunt/client/css/timeline.css
@@ -3,12 +3,12 @@
 /*animation*/
 @keyframes animacao{
 	0%{
-    background-color:red;
+
 	}
 	100%{
-    border-top: solid 3px yellow;
-    border-bottom: solid 3px yellow;
-		background-color:blue;
+    /*underline*/
+
+      /*##########3*/
 		/*color:white;*/
 		/*transform:scale(1.2);*/
 	}
@@ -20,27 +20,27 @@
   position: relative;
 }
 .postDisplayed:after{
-display: block;
+  display: block;
   position: absolute;
   left: 0;
   bottom: -10px;
   width: 0;
-  height: 10px;
+  height: 7px;
   background-color: #98004a;
   content: "";
   transition: width 0.2s;
 }
 .postDisplayed:hover{
-  /*animation:ease-in 2s animacao forwards;*/
   box-shadow: inset 0 0 0 5px #53a7ea;
   /*underline*/
   color: #98004a;
 }
 
-.postDisplayed:hover:after{
- width: 100%;
+.postDisplayed:active{
+  background-color: yellow;
+  transform: scale(1.2);
 }
 
-.postDisplayed:hover:visited{
- width: 100%;
+.postDisplayed:hover:after{
+ /*width: 100%;*/
 }
