--- a/Jaunt/client/view/user/user.html
+++ b/Jaunt/client/view/user/user.html
@@ -1,10 +1,12 @@
 <template name="user">
   {{#if user}}
-  <div class="text=center">
+  <div class="text-center">
     {{#with user.profile}}
     <h1>{{name}}</h1>
     <p>{{about}}</p>
-    {{/with}} {{> timeline}}
+    {{/with}}
+    {{> followButton}}
+     {{> timeline}}
   </div>
   {{else}}
   <h1>User not identified.</h1>
