--- a/Jaunt/client/view/user/user.html
+++ b/Jaunt/client/view/user/user.html
@@ -2,7 +2,7 @@
   {{#if user}}
   <div class="text-center">
     {{#with user.profile}}
-    <h1>{{name}}</h1>
+    <h1>{{firstName}}</h1>
     <p>{{about}}</p>
     {{/with}}
     {{> friendship}}
