changing files structure

--- a/Jaunt/client/view/home/profile/profile_form.html
+++ b/Jaunt/client/view/home/profile/profile_form.html
@@ -2,6 +2,6 @@
     <form class="form-horizontal">
         <input type="text" class="form-control" placeholder="name" required>
         <input type="text" class="form-control" placeholder="description">
-        <button class="btn btn-success">Update!</button>
+        <button class="btn-sm btn-success">Update!</button> <button id='js-profileFormCancel' class='btn-sm'>Cancel</button>
     </form>
 </template>
