fixed date display on posts, added keyboard flow to posts

--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -3,7 +3,7 @@
         <fieldset class="col-sm-12">
             <legend>{{timelineTitle}}</legend>
             {{#each posts}}
-            <blockquote class="lead postDisplayed">
+            <blockquote class="lead postDisplayed"  tabindex="0">
               <p>{{message}}</p>
                 <small>
                   <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
