fixed followings/followers display count

--- a/Jaunt/client/view/friendship.html
+++ b/Jaunt/client/view/friendship.html
@@ -1,4 +1,4 @@
 <template name="friendship">
-<p>Friends that you've added (Following): {{followings}}</p>
-<p>Friends that have added you (Followers): {{followers}}</p>
+<p>Following: {{followings}}</p>
+<p>Followers: {{followers}}</p>
 </template>
