Started to alter timeline links/buttons style

--- a/Jaunt/client/view/home/timeline/timelineLinkOptions/timelineLinkOptions.html
+++ b/Jaunt/client/view/home/timeline/timelineLinkOptions/timelineLinkOptions.html
@@ -1,5 +1,8 @@
 <template name="timelineLinkOptions">
   <div class="text-left">
-    <a href="#" id="js-myTimeline">My Timeline</a> <a href="#" id="js-globalTimeline">Global Timeline</a>
+    <!--<a href="#" id="js-myTimeline" class="active">My Timeline</a>-->
+    <!--<a href="#" id="js-globalTimeline" >Global Timeline</a>-->
+    <button id="js-myTimeline" class="btn btn-primary  btn-md ">My Timeline</button>
+    <button id="js-globalTimeline" class="btn btn-primary btn-md" >Global Timeline</button>
   </div>
 </template>
