some few visual modifications: the application's background color is now a little darker. 'social network' added to the title on header

--- a/Jaunt/client/css/timeline.css
+++ b/Jaunt/client/css/timeline.css
@@ -38,9 +38,9 @@
 }
 
 .postDisplayed:active{
-  transform: scale(1.2);
+  /*transform: scale(1.2);*/
 }
 
 .postDisplayed:hover:after{
- width: 100%;
+ /*width: 100%;*/
 }
