--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -1,5 +1,6 @@
 body {
-    background-color: cornflowerblue;
+    /*background-color: cornflowerblue;*/
+    background-color: #337AB7;
 }
 
 .container {
