--- a/Jaunt/client/view/header.html
+++ b/Jaunt/client/view/header.html
@@ -1,8 +1,9 @@
 <template name="header">
+  <div class="row"></div>
     <header class="container">
         <nav class="navbar navbar-default">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/" >Jaunt</a>
+                <a class="navbar-brand" href="/" >Jaunt Social Network</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
