--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -8,7 +8,7 @@
                 <small>
                   <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
                   <span>Date: </span>{{date}}
-                  <a href="#"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
+                  <a href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
                 </small>
             </blockquote>
             {{else}}
