--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -3,13 +3,14 @@
         <fieldset class="col-sm-12">
             <legend>{{timelineTitle}}</legend>
             {{#each posts}}
-            <blockquote class="lead postDisplayed"  tabindex="0">
+            <blockquote class="lead postDisplayed"  tabindex="0" id="{{_id}}">
+              {{> commentModal}}
               <p>{{message}}</p>
                 <small>
                   <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
                   <span>Date: </span>{{date}}
-                  <a href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
                 </small>
+                <a href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
             </blockquote>
             {{else}}
             <p class="lead text-center">
