now the timeline displays the comments. adjusted a few css glitches

--- a/Jaunt/client/view/home/comment/commentModal.html
+++ b/Jaunt/client/view/home/comment/commentModal.html
@@ -8,8 +8,8 @@
         </div>
 
         <div class="modal-body">
-          <label for="comment"><small>{{userName}} we'd love to hear you</small></label>
-          <textarea id="userComment" class="form-control"></textarea>          
+          <label for="comment"><small><span class="userNameOnComment">{{userName}}</span> we'd love to hear you</small></label>
+          <textarea id="userComment" class="form-control"></textarea>
         </div>
 
         <div class="modal-footer">
