--- a/Jaunt/client/css/timeline.css
+++ b/Jaunt/client/css/timeline.css
@@ -44,3 +44,22 @@
 .postDisplayed:hover:after{
  /*width: 100%;*/
 }
+
+/*### COMMENT SESSION ###*/
+.commentWrapperOnTimeline{
+	border-left: solid 1px grey;
+	padding-left: 1.5em;	
+}
+
+.userNameOnComment{
+	color: darkblue;
+}
+
+.textOnComment{
+	color: rgb(119, 119, 119);
+	box-sizing: border-box;
+	font-family: : "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 0.8em;
+	font-weight: 300;
+	line-height: 24px;
+}
