--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -9,8 +9,15 @@
                 <small>
                   <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
                   <span>Date: </span>{{date}}
+                  <a href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
                 </small>
-                <a href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
+                <div class="commentSession">
+                  {{#each comments}}
+                  <div class="commentWrapperOnTimeline">
+                    <span class="userNameOnComment">{{userName}}:</span><span class='textOnComment'>{{text}}</span><br>
+                  </div>
+                  {{/each}}
+                </div>
             </blockquote>
             {{else}}
             <p class="lead text-center">
@@ -19,5 +26,4 @@
             {{/each}}
         </fieldset>
     </div>
-
 </template>
