--- a/Jaunt/client/css/timeline.css
+++ b/Jaunt/client/css/timeline.css
@@ -48,17 +48,21 @@
 /*### COMMENT SESSION ###*/
 .commentWrapperOnTimeline{
 	border-left: solid 1px grey;
-	padding-left: 1.5em;	
+	padding-left: 1.5em;
 }
 
 .userNameOnComment{
-	color: darkblue;
+	box-sizing: border-box;
+	font-family: : "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 0.8em;
+	font-weight: 300;
+	line-height: 24px;
 }
 
 .textOnComment{
 	color: rgb(119, 119, 119);
 	box-sizing: border-box;
-	font-family: : "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 0.8em;
 	font-weight: 300;
 	line-height: 24px;
