--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -14,7 +14,8 @@
                 <div class="commentSession">
                   {{#each comments}}
                   <div class="commentWrapperOnTimeline">
-                    <span class="userNameOnComment">{{userName}}:</span><span class='textOnComment'>{{text}}</span><br>
+                    <span class='text-muted userNameOnComment'><a href="/user/{{userId}}">{{userName}}</a>:</span>
+                    <span class='textOnComment'>{{text}}</span><br>
                   </div>
                   {{/each}}
                 </div>
