added link/icon to leaderboard on homepage

--- a/Jaunt/client/view/home/post.html
+++ b/Jaunt/client/view/home/post.html
@@ -3,7 +3,7 @@
         <div class="col-sm-12">
             <form class="form-horizontal">
                 <fieldset>
-                    <legend>new post</legend>
+                    <legend>New post</legend>
                     <div class="row">
                         <div class="col-sm-9">
                             <textarea cols="2" class="form-control"></textarea>
