--- a/Jaunt/client/view/home/home.html
+++ b/Jaunt/client/view/home/home.html
@@ -3,7 +3,10 @@
     <aside class="col-sm-3">
         {{> profile}}
         {{> friendship}}
-    </aside>    
+        <a href="/leaderboard/{{userId}}">
+          <img width="40px" height="40px" src="resources/leaderboardImages/leaderboardIcon.png">
+           leaderboard</a>
+    </aside>
     <section class="col-sm-9">
         {{> post}}
         <!-- option to choose between timelines-->
