--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -2,8 +2,9 @@
   {{#if user}}
   <div class="text-center">
     {{#with user.profile}}
-    <h1>{{firstName}}</h1>
+    <h1>Primeiro nome: {{firstName}}</h1>
     {{/with}}
+    TITULO: {{title}}
     <div class="row">
       {{#each friends}}
         {{> leaderboardFriend}}
@@ -19,6 +20,6 @@
 <template name="leaderboardFriend">
   <div class="col-xs-12 col-sm-6">
     <!-- shows information of each -->
-    <div style='border:solid 1px red;'>friendo:{{friends.profile.firstName}}</div>
+    <div style='border:solid 1px red;'>friendo:{{profile.firstName}} -</div>
   </div>
 </template>
