--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -4,7 +4,7 @@
     {{#with user.profile}}
     <h1>Primeiro nome: {{firstName}}</h1>
     {{/with}}
-    TITULO: {{title}}
+    <h2>{{title}}</h2>
     <div class="row">
       {{#each friends}}
         {{> leaderboardFriend}}
