--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -5,7 +5,7 @@
             {{> commentModal}}
             {{#each posts}}
             <blockquote class="lead postDisplayed"  tabindex="0" id="{{_id}}">
-              <p>{{message}}</p>
+              <p>{{{message}}}</p>
                 <small>
                   <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
                   <span>Date: </span>{{date}}
