added package mattimo:emoticons

--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -16,6 +16,7 @@
                   <div class="commentWrapperOnTimeline">
                     <span class='text-muted userNameOnComment'><a href="/user/{{userId}}">{{userName}}</a>:</span>
                     <span class='textOnComment'>{{text}}</span><br>
+                    <span class='textOnComment'>{{{parseEmoticons text}}}</span><br>
                   </div>
                   {{/each}}
                 </div>
