--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -16,7 +16,9 @@
                   <div class="commentWrapperOnTimeline">
                     <span class='text-muted userNameOnComment'><a href="/user/{{userId}}">{{userName}}</a>:</span>
                     <span class='textOnComment'>{{text}}</span><br>
-                    <span class='textOnComment'>{{{parseEmoticons text}}}</span><br>
+                    {{#if isEmoticonEnabled}}
+                      <span class='textOnComment'>{{{parseEmoticons text}}}</span><br>
+                    {{/if}}
                   </div>
                   {{/each}}
                 </div>
