--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -15,9 +15,10 @@
                   {{#each comments}}
                   <div class="commentWrapperOnTimeline">
                     <span class='text-muted userNameOnComment'><a href="/user/{{userId}}">{{userName}}</a>:</span>
-                    <span class='textOnComment'>{{text}}</span><br>
                     {{#if isEmoticonEnabled}}
                       <span class='textOnComment'>{{{parseEmoticons text}}}</span><br>
+                    {{else}}
+                      <span class='textOnComment'>{{text}}</span><br>
                     {{/if}}
                   </div>
                   {{/each}}
