starting to worki with helpers with parameters to get users pontuation in leaderboard

--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -22,6 +22,7 @@
     <!-- shows information of each -->
     <div style='border:solid 1px red;'>
        <a href="/user/{{_id}}">{{profile.firstName}}</a>
+       friend's points: {{getFriendTotalPoints _id}}
     </div>
   </div>
 </template>
