debugging the flux made to fetch data for the user template

--- a/Jaunt/client/view/user/user.html
+++ b/Jaunt/client/view/user/user.html
@@ -17,6 +17,11 @@
       <div class="col-md-6">
         {{> userProfileAchievements}}
       </div>
+      <!--test only -->
+      <div>
+        points fetched{{pointsFetched}}
+      </div>
+      <!--test only -->
     </div>
     <!-- closes row -->
     {{> timeline}}
