a few visual improvements, posts sents now are cleaned in the textarea, added isotope js to the project

--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -22,3 +22,7 @@ client/view/home/home.html
     padding: 0, 5px 0 5px;
     font-style: none;
 }
+
+/*## GRID */
+.grid-item { width: 25%; }
+.grid-item--width2 { width: 50%; }
