a few more visual improvements

--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -1,6 +1,8 @@
 body {
     /*background-color: cornflowerblue;*/
     background-color: #337AB7;
+    background-image: url("resources/bg.jpg");
+    background-size: cover;
 }
 
 .container {
