--- a/Jaunt/client/css/timeline.css
+++ b/Jaunt/client/css/timeline.css
@@ -14,10 +14,15 @@
 	}
 }
 
+.postMessage{
+	overflow: hidden;
+}
+
 .postDisplayed{
   /*underline*/
   color: #ff3296;
   position: relative;
+	overflow: hidden;
 }
 .postDisplayed:after{
   display: block;
