--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -6,7 +6,8 @@ body {
 }
 
 .container {
-    background-color: #FFF;
+    /*background-color: #FFF;*/
+    background-color: rgba(255,255,255,0.95);/*added transparency*/
     width: 780px;
 }
 
