--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -2,12 +2,13 @@ body {
     /*background-color: cornflowerblue;*/
     background-color: #337AB7;
     background-image: url("resources/bg.jpg");
-    background-size: contain;;
+    background-size: contain;
 }
 
 .container {
     /*background-color: #FFF;*/
-    background-color: rgba(255,255,255,0.95);/*added transparency*/
+    background-color: rgba(255, 255, 255, 0.95);
+    /*added transparency*/
     width: 780px;
 }
 
@@ -26,7 +27,50 @@ client/view/home/home.html
     font-style: none;
 }
 
+
 /*## GRID ##*/
+
+
 /* this is to be used with isotope or masonry*/
-.grid-item { width: 25%; }
-.grid-item--width2 { width: 50%; }
+
+
+/* ---- grid ---- */
+
+.grid {
+    background: #DDD;
+}
+
+
+/* clear fix */
+
+.grid:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+
+/* ---- .element-item ---- */
+
+
+/* 5 columns, percentage width */
+
+.grid-item, .grid-sizer {
+    width: 20%;
+}
+
+.grid-item {
+    float: left;
+    height: auto;
+    background: #0D8;
+    border: 2px solid #333;
+    border-color: hsla(0, 0%, 0%, 0.7);
+}
+
+.grid-item--width2 {
+    width: 40%;
+}
+
+.grid-item--height2 {
+    height: auto;
+}
