--- a/Jaunt/client/view/home/home.html
+++ b/Jaunt/client/view/home/home.html
@@ -16,7 +16,8 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        {{> timeline}}
+        <!--{{> timeline}}-->
+        {{> gridTimeline}}
       </div>
     </div>
     {{else}}
