--- a/Jaunt/client/view/home/post.html
+++ b/Jaunt/client/view/home/post.html
@@ -12,6 +12,10 @@
                             <button class="btn btn-lg">
                                 Post!
                             </button>
+                            <!--<select id="color">
+                              <option selected="">algo aqui</option>
+                              <option style="background-color: #1abc9c">Turquoise</option>
+                            </select>-->
                         </div>
                     </div>
                 </fieldset>
