adjusting main container width

--- a/Jaunt/client/view/home/timeline/gridTimeline.html
+++ b/Jaunt/client/view/home/timeline/gridTimeline.html
@@ -22,9 +22,8 @@
   <div class="grid-item" tabindex="0" id="{{_id}}" style="background: {{color}}">
     <p class="postMessage">{{{message}}}</p>
       <small>
-        color: {{color}}
-        <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
-        <span>Date: </span>{{date}}
+        <a href="/user/{{userId}}">{{name}}</a>
+        <span>{{date}}</span>
         <a class="commentIcone" href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
       </small>
       <div class="commentSession">
