--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -18,8 +18,8 @@
   <blockquote class="lead postDisplayed"  tabindex="0" id="{{_id}}">
     <p class="postMessage">{{{message}}}</p>
       <small>
-        <span class='text-muted'>Author: <a href="/user/{{userId}}">{{name}}</a></span>
-        <span>Date: </span>{{date}}
+        <a href="/user/{{userId}}">{{name}}</a>
+        <span>{{date}}</span>
         <a class="commentIcone" href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
       </small>
       <div class="commentSession">
