--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -9,7 +9,8 @@ body {
     /*background-color: #FFF;*/
     background-color: rgba(255, 255, 255, 0.95);
     /*added transparency*/
-    width: 780px;
+    /*width: 780px;*/
+    width:100%;
 }
 
 
@@ -37,7 +38,9 @@ client/view/home/home.html
 /* ---- grid ---- */
 
 .grid {
-    background: #DDD;
+  width: 95%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.95);
 }
 
 
@@ -63,7 +66,7 @@ client/view/home/home.html
     float: left;
     height: auto;
     background: #0D8;
-    border: 2px solid #333;
+    /*border: 2px solid #333;*/
     border-color: hsla(0, 0%, 0%, 0.7);
 }
 
