--- a/Jaunt/client/css/timeline.css
+++ b/Jaunt/client/css/timeline.css
@@ -105,7 +105,7 @@
 
 /*COMMENT ICONE ON TIMELINE/GRIDTIMELINE*/
 .commentIcone{
-/*	display: inline-block;*/
+display: inline-block;
 background-color: white;
 padding: 5px;
 border-radius: 50%;
