adjusting some borders on cards

--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -2,7 +2,7 @@
   {{#if user}}
   <div class="text-center">
     {{#with user.profile}}
-    <h1>Primeiro nome: {{firstName}}</h1>
+    <h1>{{firstName}}</h1>
     {{/with}}
     <h2>{{title}}</h2>
     <div class="row">
