--- a/Jaunt/client/css/application.css
+++ b/Jaunt/client/css/application.css
@@ -1,6 +1,6 @@
 body {
     /*background-color: cornflowerblue;*/
-    background-color: #337AB7;
+    /*background-color: #337AB7;*/
     background-image: url("resources/bg.jpg");
     background-size: contain;
 }
@@ -40,7 +40,7 @@ client/view/home/home.html
 .grid {
   width: 95%;
   margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.95);
+  /*background-color: rgba(255, 255, 255, 0.95);*/
 }
 
 
@@ -66,8 +66,9 @@ client/view/home/home.html
     float: left;
     height: auto;
     background: #0D8;
-    /*border: 2px solid #333;*/
+    border: 1px solid #333;
     border-color: hsla(0, 0%, 0%, 0.7);
+    border-collapse: collapse !important;
 }
 
 .grid-item--width2 {
