added Total points placebo at top, will get that fix soon.

--- a/Jaunt/client/view/header/topbar.html
+++ b/Jaunt/client/view/header/topbar.html
@@ -1,7 +1,10 @@
 <template name="topbar">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-6">
       {{> searchFriend}}
+    </div>
+    <div class="col-xs-12 col-sm-6">
+      Total Points: 300
     </div>
   </div>
 
