--- a/Jaunt/client/view/user/user.html
+++ b/Jaunt/client/view/user/user.html
@@ -10,13 +10,11 @@
         <br>
          Posts published: {{postsCount}}
          <br>
-         Total Points: {{totalPoints}}<br>
-         Points from comments: {{commentPoints}}<br>
-         Points from Posts: {{postPoints}}
+         {{> userProfilePoints}}
       </div>
       <div class="col-md-6">
         {{> userProfileAchievements}}
-      </div>      
+      </div>
     </div>
     <!-- closes row -->
     {{> timeline}}
@@ -37,4 +35,10 @@
       </div>
     </div>
   </div>
+</template>
+
+<template name="userProfilePoints">
+  Total Points: {{totalPoints}}<br>
+  Points from comments: {{commentPoints}}<br>
+  Points from Posts: {{postPoints}}
 </template>
