added card's color selector. it is not working yet, gotta fix that soon

--- a/Jaunt/client/view/header/topbar.html
+++ b/Jaunt/client/view/header/topbar.html
@@ -4,7 +4,7 @@
       {{> searchFriend}}
     </div>
     <div class="col-xs-12 col-sm-6">
-      Total Points: 300
+      Total Points: 300<!-- this has to be removed and the real total amount of points displayed here. -->
     </div>
   </div>
 
