--- a/Jaunt/client/view/home/post.html
+++ b/Jaunt/client/view/home/post.html
@@ -5,18 +5,29 @@
                 <fieldset>
                     <legend>New post</legend>
                     <div class="row">
-                        <div class="col-sm-9">
+                        <div class="col-sm-6">
                             <textarea id="newPostTextArea" cols="2" class="form-control"></textarea>
                         </div>
-                        <div class="col-sm-1">
-                            <button class="btn btn-lg">
-                                Post!
-                            </button>
-                            <!--<select id="color">
-                              <option selected="">algo aqui</option>
-                              <option style="background-color: #1abc9c">Turquoise</option>
-                            </select>-->
-                        </div>
+                        <div class="col-sm-6">
+                        card's color:
+                        <select id="cardsColor">
+                          <!-- <option selected="">Select the card's color!</option>-->
+                          <option style="background-color: #1abc9c">Turquoise</option>
+                          <option style="background-color: #2ecc71">Emerald</option>
+                          <option style="background-color: #3498db">Peter River</option>
+                          <option style="background-color: #9b59b6">Amethyst</option>
+                          <option style="background-color: #34495e">Wet Asphalt</option>
+                          <option style="background-color: #16a085">Green Sea</option>
+                          <option style="background-color: #e67e22">Carrot</option>
+                          <option style="background-color: #f1c40f">Sun FLower</option>
+                          <option style="background-color: #e74c3c">Alizarin</option>
+                        </select>
+                      </div>
+                      <div class="col-sm-1">
+                          <button class="btn btn-lg">
+                              Post!
+                          </button>
+                      </div>
                     </div>
                 </fieldset>
             </form>
