corrected where the new feature 'find friends' should appear. Its place is in home not header!

--- a/Jaunt/client/view/header.html
+++ b/Jaunt/client/view/header.html
@@ -11,6 +11,6 @@
                 </ul>
             </div>
         </nav>
-        {{> topbar}}
+        <!-- {{> topbar}}-->
     </header>
 </template>
