--- a/Jaunt/client/view/home/home.html
+++ b/Jaunt/client/view/home/home.html
@@ -1,6 +1,7 @@
 <template name="home">
     {{#if currentUser}}
     <div class='row'>
+      {{> topbar}}
     <aside class="col-sm-3">
         {{> profile}}
         {{> friendship}}
