--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -6,9 +6,11 @@
     {{/with}}
     <h2>{{title}}</h2>
     <div class="row">
-      {{#each friends}}
-        {{> leaderboardFriend}}
-      {{/each}}
+      <div class="col-xs-12">
+        {{#each friends}}
+          {{> leaderboardFriend}}
+        {{/each}}
+      </div>
     </div>
   </div>
   {{else}}
@@ -18,11 +20,25 @@
 
 
 <template name="leaderboardFriend">
-  <div class="col-xs-12 col-sm-6">
+  <div class="col-xs-12 col-sm-6" style='border:solid 1px grey; box-sizing: border-box; border-collapse: collapse;'>
     <!-- shows information of each -->
-    <div style='border:solid 1px red;'>
-       <a href="/user/{{_id}}">{{profile.firstName}}</a>
-       friend's points: {{getFriendTotalPoints _id}}
-    </div>
+      <div class="col-xs-12">
+        <a href="/user/{{_id}}">{{profile.firstName}}</a><br>
+      </div>
+       <div class="col-xs-12">
+         {{profile.about}}
+       </div>
+       <div class="col-xs-12">
+         friend's total points:7 <!--{{getFriendTotalPoints _id}}-->
+       </div>
+       <div class="col-xs-12">
+         Achievements<br>
+      </div>
+       <div class="col-xs-6">
+         <img src='/resources/achievementsImages/achievement_firstPost.png' width="50px" height="50px"/> First Comment!
+       </div>
+       <div class="col-xs-6">
+         <img src='/resources/achievementsImages/achievement_firstPost.png' width="50px" height="50px"/> First Post!
+       </div>
   </div>
 </template>
