now the colors in the cards are the same that the user has selected

--- a/Jaunt/client/view/home/post.html
+++ b/Jaunt/client/view/home/post.html
@@ -12,15 +12,15 @@
                         card's color:
                         <select id="cardsColor">
                           <!-- <option selected="">Select the card's color!</option>-->
-                          <option style="background-color: #1abc9c">Turquoise</option>
-                          <option style="background-color: #2ecc71">Emerald</option>
-                          <option style="background-color: #3498db">Peter River</option>
-                          <option style="background-color: #9b59b6">Amethyst</option>
-                          <option style="background-color: #34495e">Wet Asphalt</option>
-                          <option style="background-color: #16a085">Green Sea</option>
-                          <option style="background-color: #e67e22">Carrot</option>
-                          <option style="background-color: #f1c40f">Sun FLower</option>
-                          <option style="background-color: #e74c3c">Alizarin</option>
+                          <option style="background-color: #1abc9c" id='#1abc9c'>Turquoise</option>
+                          <option style="background-color: #2ecc71" id='#2ecc71' >Emerald</option>
+                          <option style="background-color: #3498db" id='#3498db' >Peter River</option>
+                          <option style="background-color: #9b59b6" id='#9b59b6' >Amethyst</option>
+                          <option style="background-color: #34495e" id='#34495e' >Wet Asphalt</option>
+                          <option style="background-color: #16a085" id='#16a085' >Green Sea</option>
+                          <option style="background-color: #e67e22" id='#e67e22' >Carrot</option>
+                          <option style="background-color: #f1c40f" id='#f1c40f' >Sun FLower</option>
+                          <option style="background-color: #e74c3c" id='#e74c3c' >Alizarin</option>
                         </select>
                       </div>
                       <div class="col-sm-1">
