added some style to the post's author name

--- a/Jaunt/client/view/home/timeline/timeline.html
+++ b/Jaunt/client/view/home/timeline/timeline.html
@@ -18,7 +18,7 @@
   <blockquote class="lead postDisplayed"  tabindex="0" id="{{_id}}">
     <p class="postMessage">{{{message}}}</p>
       <small>
-        <a href="/user/{{userId}}">{{name}}</a>
+        <a href="/user/{{userId}}" id='postAuthor'>{{name}}</a>
         <span>{{date}}</span>
         <a class="commentIcone" href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
       </small>
