--- a/Jaunt/client/view/home/timeline/gridTimeline.html
+++ b/Jaunt/client/view/home/timeline/gridTimeline.html
@@ -22,7 +22,7 @@
   <div class="grid-item" tabindex="0" id="{{_id}}" style="background: {{color}}">
     <p class="postMessage">{{{message}}}</p>
       <small>
-        <a href="/user/{{userId}}">{{name}}</a>
+        <a href="/user/{{userId}}" id='postAuthor'>{{name}}</a>
         <span>{{date}}</span>
         <a class="commentIcone" href=""><span id="js-commentPost" class="glyphicon glyphicon-comment" aria-hidden="true"></span></a>
       </small>
