now achievements can be found in the user collection

--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -29,7 +29,13 @@
          {{profile.about}}
        </div>
        <div class="col-xs-12">
-         friend's total points:7 <!--{{getFriendTotalPoints _id}}-->
+         friend's total points:{{totalPoints}} <!--{{getFriendTotalPoints _id}}-->
+       </div>
+       <div class="col-xs-6">
+         Post points: {{postPoints}}
+       </div>
+       <div class="col-xs-6">
+         Comment points: {{commentPoints}}
        </div>
        <div class="col-xs-12">
          Achievements<br>
