added leaderboard.css file

--- a/Jaunt/client/view/leaderboard/leaderboard.html
+++ b/Jaunt/client/view/leaderboard/leaderboard.html
@@ -20,7 +20,7 @@
 
 
 <template name="leaderboardFriend">
-  <div class="col-xs-12 col-sm-6" style='border:solid 1px grey; box-sizing: border-box; border-collapse: collapse;'>
+  <div class="col-xs-12 col-sm-6 leaderboardFriendBoard">
     <!-- shows information of each -->
       <div class="col-xs-12">
         <a href="/user/{{_id}}">{{profile.firstName}}</a><br>
